# yeardreamschool6th

./: LICENSE  README.md  check_env.py  env.example  pyproject.toml
1주차/04_파이썬기본문법1/: 1_실습노트북_수강생용.ipynb
1주차/05_파이썬기본문법2/: 2_실습노트북_수강생용.ipynb  2_실습노트북_완성용.ipynb
2주차/01_파이썬중급문법2/: 01_class_practice_수강생용.ipynb  04_advanced_syntax_수강생용.ipynb
2주차/01_파이썬중급문법2/02_mini_project_simple/: calculator.py  main.py  string_utils.py
2주차/01_파이썬중급문법2/03_1_mini_project_class/: company.py  department.py  main.py
2주차/01_파이썬중급문법2/03_mini_project_class/: main.py
